--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
 	},
 	"require": {
 		"php": ">=5.3.7",
-		"phpoffice/phpword": "^0.17.0"
+		"phpoffice/phpword": "^0.17.0",
+		"mikey179/vfsstream": "^1.6"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
 	},
 	"require-dev": {
-		"mikey179/vfsStream": "1.1.*",
 		"phpunit/phpunit": "4.* || 5.*"
 	}
 }
